--- a/content/posts/2021-08-28-aceインターンを終えて.md
+++ b/content/posts/2021-08-28-aceインターンを終えて.md
@@ -2,7 +2,7 @@
 template: post
 title: ACEインターンを終えて...
 slug: intern-2021-ace
-socialImage: "https://www.cyberagent.co.jp/files/topics/26121_ext_03_0.jpg"
+socialImage: /media/26121_ext_03_0.jpg
 draft: false
 date: 2021-08-28T06:20:53.845Z
 description: |-
